# viz-js-rs

./: Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml
examples/simple/: Cargo.toml  README.md  index.html
examples/simple/src/: main.rs
js/: viz-standalone.js
src/: lib.rs
